@@ -1,5 +1,5 @@
 /*
- * Copyright  2000-2005 The Apache Software Foundation
+ * Copyright 2000-2006 The Apache Software Foundation
  *
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -61,6 +61,10 @@ public class EchoPropertiesTest extends BuildFileTest {
 
     public void testEchoToLog() {
         expectLogContaining("testEchoToLog", "test.property="+TEST_VALUE);
+    }
+
+    public void testEchoWithEmptyPrefixToLog() {
+        expectLogContaining("testEchoWithEmptyPrefixToLog", "test.property="+TEST_VALUE);
     }
 
 
